[package]
name = "obf-rs"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/RLHerbert/obf-rs/"
license = "MIT"
description = "An implementation of the Open Bracket Format"
keywords = ["sports", "esports", "tournament", "bracket", "obf"]
# categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
